--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,9 +27,10 @@ jobs:
       - run: yarn install
       - run: yarn run fix
       - run: git add .
-      - run: "git commit -a -m \"Fix with standard\" || :"
+      - run: 'git commit -a -m "Fix with standard" || :'
       - run: git push
   doc:
+    needs: fix
     runs-on: ubuntu-latest
     steps:
       - name: Install git
@@ -42,9 +43,10 @@ jobs:
         with:
           node-version: 12
       - run: yarn install
+      - run: git pull
       - run: yarn run doc
       - run: git add .
-      - run: "git commit -a -m \"Update JSDoc\" || :"
+      - run: 'git commit -a -m "Update JSDoc" || :'
       - run: git push
   publish-npm:
     needs: [test, fix]
