--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@dada513/package-template",
+  "name": "@dada513/lavacord-tracks",
   "version": "1.0.0",
-  "description": "your-description",
+  "description": "Get lavalink track from rest api",
   "main": "esm.js",
-  "repository": "https://github.com/dada513/package",
+  "repository": "https://github.com/dada513/lavacord-tracks",
   "author": "dada513",
   "scripts": {
     "doc": "jsdoc src -r -d docs README.md",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "axios": "^0.20.0",
     "esm": "^3.2.25"
   },
   "devDependencies": {
